# optitrack-motive-connector

./: .gitignore  README.md  example.ipynb  pyproject.toml
src/optitrack_motive_connector/: __init__.py  context.py  diagnose_natnet.py  main.py
tests/: test_context.py
